<resources>
    <string name="app_name">Vitesse</string>
    <string name="no_candidate">No Candidate</string>
    <string name="no_candidate_query">No candidate of such input</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">favorite</string>
    <string name="search_a_candidate">Search a Candidate</string>
    <string name="candidate_image">Candidate Image</string>
    <string name="icon_description">Icon Description</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="name">Prénom</string>
    <string name="surname">Nom</string>
    <string name="phone">Phone</string>
    <string name="note_here">Notes</string>
    <string name="save">Save</string>
    <string name="salary">Salary Claims</string>
    <string name="jj_mm_aaaa">dd/mm/yyyy</string>
    <string name="calendar_icon">Calendar Icon</string>
    <string name="enter_date">Enter a Date</string>
    <string name="email">Email</string>
    <string name="add_candidate">Add a Candidate</string>
    <string name="details_candidate">Info on the Candidate</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="about">About</string>
    <string name="birth_date">03/03/89 (34 years)</string>
    <string name="amount">3500 €</string>
    <string name="birthday">Birthday</string>
    <string name="conversion">≃ £ 3026,99</string>
    <string name="description_text">Description Text</string>
    <string name="username_text">Username</string>
    <string name="favoris">Favorites</string>
    <string name="edit">Edit</string>
    <string name="editCandidate">Edit a candidate</string>
    <string name="delete">Delete</string>
    <string name="no_favorites">No favorites yet</string>
    <string name="added_canidate_success">Candidate added successfully</string>
    <string name="error_saving_canidate">Error saving candidate</string>
    <string name="all_field_vailidity">All fields must be valid</string>
    <string name="permission_access_files">Permission required to access files</string>
    <string name="sélect_date">Select a date</string>
    <string name="first_name_require">First name required</string>
    <string name="last_name_require">Last name required</string>
    <string name="salary_require">Salary claims required</string>
    <string name="only_digit">Field should only contain digits</string>
    <string name="number_require">Phone number required</string>
    <string name="phone_digit_limit">Invalid phone number (10 digits required)</string>
    <string name="date_require">Date required</string>
    <string name="email_require">Email required</string>
    <string name="invalid_email">Invalid email</string>
    <string name="currency_conversion">Currency conversion in progress</string>
    <string name="invalid_salary_input">Invalid salary input</string>
    <string name="unavailable_phone_number">Phone number not available</string>
    <string name="unavailable_email">No email app found on device</string>
    <string name="unavailable_email_address">Email address not available</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="delete_alert_dialog">Are you sure you want to delete this candidate? This action cannot be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="years_old">years old</string>
    <string name="all">All</string>
    <string name="filtrer">Filter</string>
    <string name="euros">€</string>


    <string-array name="country_codes">
        <item>+1</item>
        <item>+44</item>
        <item>+91</item>
        <!-- Add more country codes as needed -->
    </string-array>

</resources>