<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.15"
        android:layout_margin="8dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/imageCandidat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/candidate_image"
            android:scaleType="centerCrop"
            android:src="@drawable/personicon" />
    </androidx.cardview.widget.CardView>

    <!-- LinearLayout for Identifiant and Identifiant2 -->
    <LinearLayout
        android:id="@+id/namesContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@id/note">

        <!-- TextView for First Name -->

        <TextView
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textStyle="bold" />
        <!-- TextView for Last Name -->
        <TextView
            android:id="@+id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textStyle="bold"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

    <!-- TextView for Description -->
    <TextView
        android:id="@+id/note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/username_text"
        android:maxLines="2"
        app:layout_constraintTop_toBottomOf="@id/namesContainer"
        app:layout_constraintStart_toEndOf="@id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
