<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detailsToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/details_candidate"
        android:background="#EEE6F3"
        app:titleTextColor="@android:color/black"
        app:navigationIcon="@drawable/baseline_keyboard_backspace_24"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:menu="@menu/toolbar_menu"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detailsFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/detailsPic"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="50dp"
            app:cardElevation="0dp"
            app:layout_constraintWidth_percent="0.90"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/imageCandidat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#C5C4C4"
                android:contentDescription="@string/candidate_image"
                android:scaleType="fitCenter"
                android:src="@drawable/personicon" />
        </androidx.cardview.widget.CardView>

        <!-- First ImageButton -->

        <FrameLayout
            android:id="@+id/buttonCall"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="60dp"
            android:background="@drawable/circle_background"
            app:layout_constraintStart_toStartOf="@id/detailsPic"
            app:layout_constraintTop_toBottomOf="@id/detailsPic">

            <ImageView
                android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/call_16dp"
            android:layout_gravity="center"
                />
        </FrameLayout>

        <TextView
            android:id="@+id/textAppel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/buttonCall"
            app:layout_constraintTop_toBottomOf="@id/buttonCall"
            app:layout_constraintEnd_toEndOf="@id/buttonCall"
            />


        <!-- Second ImageButton -->
        <!-- Second ImageButton centered between buttonCall and buttonMail -->

        <FrameLayout
            android:id="@+id/buttonSms"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/circle_background"
            app:layout_constraintStart_toEndOf="@id/buttonCall"
            app:layout_constraintEnd_toStartOf="@id/buttonMail"
            app:layout_constraintTop_toBottomOf="@id/detailsPic"
            app:layout_constraintHorizontal_bias="0.5">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/sms_16dp"
                android:layout_gravity="center"
                />
        </FrameLayout>

        <TextView
            android:id="@+id/textSms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/buttonSms"
            app:layout_constraintTop_toBottomOf="@id/buttonSms"
            app:layout_constraintEnd_toEndOf="@id/buttonSms"
            />


        <!-- Third ImageButton -->

        <FrameLayout
            android:id="@+id/buttonMail"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/circle_background"
            app:layout_constraintStart_toEndOf="@id/buttonSms"
            app:layout_constraintTop_toBottomOf="@id/detailsPic"
            app:layout_constraintEnd_toEndOf="@id/detailsPic"
            app:layout_constraintHorizontal_bias="0.5">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/mail_16dp"
                android:layout_gravity="center"
                />
        </FrameLayout>


        <TextView
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/buttonMail"
            app:layout_constraintTop_toBottomOf="@id/buttonMail"
            app:layout_constraintEnd_toEndOf="@id/buttonMail"
            />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.90"
            android:layout_margin="30dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/buttonMail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardBackgroundColor="#EEE6F3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <!-- First TextView -->
                <TextView
                    android:id="@+id/textAPropos1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <!-- Second TextView -->
                <TextView
                    android:id="@+id/textAPropos2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/birth_date"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/textAPropos1"
                    app:layout_constraintStart_toStartOf="parent" />

                <!-- Third TextView -->
                <TextView
                    android:id="@+id/textAPropos3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/textAPropos2"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.90"
            app:cardBackgroundColor="#EEE6F3"
            android:layout_margin="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/cardViewText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <!-- First TextView -->
                <TextView
                    android:id="@+id/textSalaire1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salary"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <!-- Second TextView -->
                <TextView
                    android:id="@+id/textSalaire2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/amount"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/textSalaire1"
                    app:layout_constraintStart_toStartOf="parent" />

                <!-- Third TextView -->
                <TextView
                    android:id="@+id/textSalaire3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/conversion"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/textSalaire2"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewText3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#EEE6F3"
            app:layout_constraintWidth_percent="0.90"
            android:layout_margin="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/cardViewText2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginBottom="30dp">

                <!-- First TextView -->
                <TextView
                    android:id="@+id/textNotes1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_here"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <!-- Second TextView -->
                <!-- Inside @+id/cardViewText3 -->
                <EditText
                    android:id="@+id/textNotes2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_marginTop="30dp"
                    android:inputType="textMultiLine"
                    android:gravity="top"
                    android:minLines="10"
                    android:maxLines="15"
                    android:scrollbars="vertical"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/textNotes1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
